overlap fix

--- a/styles.css
+++ b/styles.css
@@ -376,10 +376,20 @@ footer{
 max-width: 500px;} 
 
 
-.volunteer-pportunities-title{
-  margin-top:2rem;
-  margin-bottom:2rem;
+.volunteer-opportunities-title{
+  margin-top:3rem;
+  margin-bottom:3rem;
   text-align:center;
+  border-radius: 7px;
+  background-color: #FFE5EC;
+  padding: 10px 0;
+}
+
+.volunteer-opportunities-title h1{
+  margin-top:0;
+  margin-bottom:0;
+  text-align:center;
+  padding: 1rem 0;
 }
   
 .volunteer-photo{ 
@@ -387,7 +397,7 @@ max-width: 500px;}
     border: 2px solid black; 
     width: 100%; 
     height: auto; 
-    border-radius: 4px; }
+    border-radius: 2px; }
 
 .volunteer-events-title{
   background-color: #FB6F92;
